@@ -1,4 +1,5 @@
 March 2018 6.3
+  - Server profile: added option if referential integrity overlay is active to sip cleanup actions
   - LAM Pro:
    -> Support custom structural object classes with new custom type
    -> Support dynamic lists
